tests/testWorkflows/invalid_workflows/invalidInputWorkflow.playbook
{
    "name": "invalidInputWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "next_steps": [
                {
                    "conditions": [
                        {
                            "action": "regMatch",
                            "args": [
                                {
                                    "name": "regex",
                                    "value": "(.*)"
                                }
                            ],
                            "transforms": [
                                {
                                    "action": "length",
                                    "args": []
                                }
                            ]
                        }
                    ],
                    "destination_uid": "1",
                    "source_uid": "2",
                    "status": "Success"
                }
            ],
            "start": "start",
            "steps": [
                {
                    "action": "returnPlusOne",
                    "app": "HelloWorld",
                    "inputs": [
                        {
                            "name": "number",
                            "value": "abc"
                        }
                    ],
                    "name": "1",
                    "position": {},
                    "risk": 0,
                    "uid": "1",
                    "widgets": []
                },
                {
                    "action": "helloWorld",
                    "app": "Invalid",
                    "inputs": [],
                    "name": "start",
                    "position": {},
                    "risk": 0,
                    "uid": "2",
                    "widgets": []
                }
            ]
        }
    ]
}